[gd_scene load_steps=15 format=3 uid="uid://bkqoqd4b2i84e"]

[ext_resource type="Script" path="res://Scenes/Clock.gd" id="1_s62dx"]
[ext_resource type="Texture2D" uid="uid://c3jilcdrom06" path="res://Assets/Background_Menus2.png" id="2_1ra1e"]
[ext_resource type="LabelSettings" uid="uid://cu58gbxvkh0uq" path="res://ThemeEditor/label_settings.tres" id="3_jt1im"]
[ext_resource type="Texture2D" uid="uid://cnn3xdr0ywhc8" path="res://Assets/back_icon.png" id="3_xgl4i"]
[ext_resource type="Texture2D" uid="uid://db1ee5ts48vp4" path="res://Assets/check.png" id="4_35ffw"]
[ext_resource type="Texture2D" uid="uid://benejb0g0wq4w" path="res://Assets/minus_icon.png" id="4_pu5le"]
[ext_resource type="Texture2D" uid="uid://3fadgtrhs5yk" path="res://Assets/add_icon.png" id="5_q2c2f"]
[ext_resource type="Theme" uid="uid://dsjyqvry1y226" path="res://ThemeEditor/menus_theme.tres" id="6_doihf"]
[ext_resource type="PackedScene" uid="uid://dcv5g3jyjvvk3" path="res://Models/clock.tscn" id="6_q5fhi"]
[ext_resource type="LabelSettings" uid="uid://civvkj0fig80k" path="res://ThemeEditor/big_text.tres" id="7_5fm3g"]
[ext_resource type="AudioStream" uid="uid://d1rxlluort1mq" path="res://Assets/fireworks2.mp3" id="11_hs6s7"]

[sub_resource type="Animation" id="Animation_kx2mp"]
resource_name = "play_feedback"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BoxContainer/Confetti:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-3.1, -0.1, 0.1, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s4n3x"]
_data = {
"play_feedback": SubResource("Animation_kx2mp")
}

[sub_resource type="Curve" id="Curve_amdnx"]
_data = [Vector2(0.00865801, 0.197802), 0.0, 0.0, 0, 0, Vector2(0.982684, 0.879121), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Clock" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s62dx")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -486.0
offset_bottom = -176.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.72948, 1.3717)
texture = ExtResource("2_1ra1e")
expand_mode = 2

[node name="VoltarButton" type="Button" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 27.0
offset_right = 316.0
offset_bottom = 164.0
theme = ExtResource("6_doihf")
text = " Voltar"
icon = ExtResource("3_xgl4i")

[node name="ContinuarButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -319.0
offset_top = 27.0
offset_right = -32.0
offset_bottom = 164.0
grow_horizontal = 0
theme = ExtResource("6_doihf")
text = " Continuar"
icon = ExtResource("4_35ffw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -648.0
offset_right = 500.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2

[node name="Clock" parent="VBoxContainer/BoxContainer" instance=ExtResource("6_q5fhi")]

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Que horas s√£o?"
label_settings = ExtResource("3_jt1im")
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
text = "Horas"
label_settings = ExtResource("3_jt1im")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="MinusHoursButton" type="Button" parent="VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("6_doihf")
icon = ExtResource("4_pu5le")

[node name="Hours" type="Label" parent="VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
label_settings = ExtResource("7_5fm3g")
horizontal_alignment = 1

[node name="PlusHoursButton" type="Button" parent="VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("6_doihf")
icon = ExtResource("5_q2c2f")

[node name="BoxContainer" type="BoxContainer" parent="VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer3/VBoxContainer2"]
layout_mode = 2
text = "Minutos"
label_settings = ExtResource("3_jt1im")
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer3/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="MinusMinutesButton" type="Button" parent="VBoxContainer/HBoxContainer3/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("6_doihf")
icon = ExtResource("4_pu5le")

[node name="Minutes" type="Label" parent="VBoxContainer/HBoxContainer3/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
label_settings = ExtResource("7_5fm3g")
horizontal_alignment = 1

[node name="PlusMinutesButton" type="Button" parent="VBoxContainer/HBoxContainer3/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("6_doihf")
icon = ExtResource("5_q2c2f")

[node name="BoxContainer2" type="BoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_hs6s7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s4n3x")
}

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Confetti" type="Node2D" parent="BoxContainer"]
modulate = Color(1, 1, 1, 0)

[node name="Green" type="CPUParticles2D" parent="BoxContainer/Confetti"]
position = Vector2(0, -180)
amount = 30
explosiveness = 0.6
randomness = 0.86
local_coords = true
direction = Vector2(0, -1)
spread = 59.4
gravity = Vector2(0, 100)
initial_velocity_min = 81.0
initial_velocity_max = 470.0
angular_velocity_min = 210.88
angular_velocity_max = 280.0
linear_accel_min = 35.2
linear_accel_max = 67.2
scale_amount_min = 10.0
scale_amount_max = 33.0
scale_amount_curve = SubResource("Curve_amdnx")
color = Color(0.34167, 0.527007, 0, 1)

[node name="Red" type="CPUParticles2D" parent="BoxContainer/Confetti"]
position = Vector2(0, -180)
amount = 30
explosiveness = 0.6
randomness = 0.86
local_coords = true
direction = Vector2(0, -1)
spread = 59.4
gravity = Vector2(0, 100)
initial_velocity_min = 81.0
initial_velocity_max = 470.0
angular_velocity_min = 210.88
angular_velocity_max = 280.0
linear_accel_min = 35.2
linear_accel_max = 67.2
scale_amount_min = 10.0
scale_amount_max = 33.0
scale_amount_curve = SubResource("Curve_amdnx")
color = Color(0.813426, 0.207508, 0.137518, 1)

[node name="Blue" type="CPUParticles2D" parent="BoxContainer/Confetti"]
position = Vector2(0, -180)
amount = 30
explosiveness = 0.6
randomness = 0.86
local_coords = true
direction = Vector2(0, -1)
spread = 59.4
gravity = Vector2(0, 100)
initial_velocity_min = 81.0
initial_velocity_max = 470.0
angular_velocity_min = 210.88
angular_velocity_max = 280.0
linear_accel_min = 35.2
linear_accel_max = 67.2
scale_amount_min = 10.0
scale_amount_max = 33.0
scale_amount_curve = SubResource("Curve_amdnx")
color = Color(0.19781, 0.466802, 0.776808, 1)

[node name="Yellow" type="CPUParticles2D" parent="BoxContainer/Confetti"]
position = Vector2(0, -180)
amount = 30
explosiveness = 0.6
randomness = 0.86
local_coords = true
direction = Vector2(0, -1)
spread = 59.4
gravity = Vector2(0, 100)
initial_velocity_min = 81.0
initial_velocity_max = 470.0
angular_velocity_min = 210.88
angular_velocity_max = 280.0
linear_accel_min = 35.2
linear_accel_max = 67.2
scale_amount_min = 10.0
scale_amount_max = 33.0
scale_amount_curve = SubResource("Curve_amdnx")
color = Color(0.794791, 0.780768, 0.238602, 1)

[node name="Green2" type="CPUParticles2D" parent="BoxContainer/Confetti"]
position = Vector2(0, 180)
rotation = 3.14159
amount = 30
explosiveness = 0.6
randomness = 0.86
local_coords = true
direction = Vector2(0, -1)
spread = 59.4
gravity = Vector2(0, 100)
initial_velocity_min = 81.0
initial_velocity_max = 470.0
angular_velocity_min = 210.88
angular_velocity_max = 280.0
linear_accel_min = 35.2
linear_accel_max = 67.2
scale_amount_min = 10.0
scale_amount_max = 33.0
scale_amount_curve = SubResource("Curve_amdnx")
color = Color(0.34167, 0.527007, 0, 1)

[node name="Red2" type="CPUParticles2D" parent="BoxContainer/Confetti"]
position = Vector2(0, 180)
rotation = 3.14159
amount = 30
explosiveness = 0.6
randomness = 0.86
local_coords = true
direction = Vector2(0, -1)
spread = 59.4
gravity = Vector2(0, 100)
initial_velocity_min = 81.0
initial_velocity_max = 470.0
angular_velocity_min = 210.88
angular_velocity_max = 280.0
linear_accel_min = 35.2
linear_accel_max = 67.2
scale_amount_min = 10.0
scale_amount_max = 33.0
scale_amount_curve = SubResource("Curve_amdnx")
color = Color(0.813426, 0.207508, 0.137518, 1)

[node name="Blue2" type="CPUParticles2D" parent="BoxContainer/Confetti"]
position = Vector2(0, 180)
rotation = 3.14159
amount = 30
explosiveness = 0.6
randomness = 0.86
local_coords = true
direction = Vector2(0, -1)
spread = 59.4
gravity = Vector2(0, 100)
initial_velocity_min = 81.0
initial_velocity_max = 470.0
angular_velocity_min = 210.88
angular_velocity_max = 280.0
linear_accel_min = 35.2
linear_accel_max = 67.2
scale_amount_min = 10.0
scale_amount_max = 33.0
scale_amount_curve = SubResource("Curve_amdnx")
color = Color(0.19781, 0.466802, 0.776808, 1)

[node name="Yellow2" type="CPUParticles2D" parent="BoxContainer/Confetti"]
position = Vector2(0, 180)
rotation = 3.14159
amount = 30
explosiveness = 0.6
randomness = 0.86
local_coords = true
direction = Vector2(0, -1)
spread = 59.4
gravity = Vector2(0, 100)
initial_velocity_min = 81.0
initial_velocity_max = 470.0
angular_velocity_min = 210.88
angular_velocity_max = 280.0
linear_accel_min = 35.2
linear_accel_max = 67.2
scale_amount_min = 10.0
scale_amount_max = 33.0
scale_amount_curve = SubResource("Curve_amdnx")
color = Color(0.794791, 0.780768, 0.238602, 1)

[connection signal="pressed" from="VoltarButton" to="." method="_on_voltar_button_pressed"]
[connection signal="pressed" from="ContinuarButton" to="." method="_on_continuar_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer/MinusHoursButton" to="." method="_on_minus_hours_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer/PlusHoursButton" to="." method="_on_plus_hours_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/VBoxContainer2/HBoxContainer2/MinusMinutesButton" to="." method="_on_minus_minutes_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/VBoxContainer2/HBoxContainer2/PlusMinutesButton" to="." method="_on_plus_minutes_button_pressed"]
